# Genesis

./: .gitignore  .gitmodules  Build.bat  Build.py  Build.sh  CMakeLists.txt  LICENSE.md  README.md
Engine/: CMakeLists.txt
Engine/include/Engine/: Engine.h  Log.h
Engine/include/Platform/: SDLWindow.h
Engine/src/: Engine.cpp  Log.cpp
Engine/src/Platform/: SDLWindow.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
